# teleport-docs-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  embed.py  fix_include.py  main.py  pyproject.toml  requirement.txt
chroma_index/675f9793-9f91-484e-b755-a9889611edd8/: index_metadata.pickle
chroma_index/c2df5987-5bc7-452f-9719-0524338c4256/: index_metadata.pickle
chroma_index/f6ef013e-f230-4038-b8fe-01e2bdd896cb/: index_metadata.pickle
